--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,2 @@
-<h2>This cat...<h2>
-<img src="https://s3.amazonaws.com/after-school-assets/cat.gif">
+      <h1>I love cats</h1>
+      <img src="https://s3.amazonaws.com/after-school-assets/cat-typing.gif">
